--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,7 +1,45 @@
 [colors]
-bg = #66101322
+#bg = #66101322
+bg = #bc1a1b26
 fg = #ffffff
 red = #ff7a93
+
+
+[bar/main]
+bottom = true
+font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
+font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
+font-2 = "JetBrainsMono Nerd Font:size=19;1"
+font-3 = "Material Icons:size=9;1"
+font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
+modules-center = pulseaudio battery time
+width = 12%
+offset-x = 43%
+offset-y = 1%
+height = 50px
+background = ${colors.bg}
+foreground = ${colors.fg}
+
+
+
+[bar/topbar]
+top = true
+wm-restack = bspwm
+
+background = ${colors.bg}
+foreground = ${colors.fg}
+
+font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
+font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
+font-2 = "JetBrainsMono Nerd Font:size=19;1"
+font-3 = "Material Icons:size=9;1"
+font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
+
+modules-right = bspwm
+cursor-click = pointer
+
+
+
 
 [bar/left]
 width = 9.3%
@@ -45,11 +83,12 @@ cursor-click = pointer
 
 
 [bar/right]
-width = 14%
+width = 14.5%
 offset-x = 85%
 offset-y = 10px
 height = 27
 top = true
+tray-detached = true
 wm-restack = bspwm
 
 background = ${colors.bg}
@@ -118,6 +157,14 @@ label-occupied-padding = 1
 label-empty = %icon%
 label-empty-foreground = #c2c2c2
 label-empty-padding = 1
+
+[module/time]
+type = internal/date
+interval = 1
+time = %H:%M
+format = <label>
+format-foreground = ${colors.fg}
+label = %{T1}%time%%{T-}
 
 
 [module/date]
