--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,108 +1,37 @@
 [colors]
 #bg = #66101322
-bg = #bc1a1b26
-fg = #ffffff
+bg = #1a1b26
+#bg = #05151a
+fg = #c0caf5
 red = #ff7a93
-
-
-[bar/main]
-bottom = true
-font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
-font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
-font-2 = "JetBrainsMono Nerd Font:size=19;1"
-font-3 = "Material Icons:size=9;1"
-font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
-modules-center = pulseaudio battery time
-width = 12%
-offset-x = 43%
-offset-y = 1%
-height = 50px
-background = ${colors.bg}
-foreground = ${colors.fg}
+darker-blue = 7aa2f7
+gray = #c0caf5
 
 
 
 [bar/topbar]
 top = true
 wm-restack = bspwm
-
+height = 26
+underline-size = 2
 background = ${colors.bg}
 foreground = ${colors.fg}
+padding-left             = 2
+padding-right            = 2
+compositing-underline = over
 
-font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
-font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
-font-2 = "JetBrainsMono Nerd Font:size=19;1"
+
+font-0 = "SF Pro Display:size=10;1"
+font-1 = "JetBrains Mono Nerd Font:style=Bold:size=10;1"
+font-2 = "JetBrainsMono Nerd Font:size=10;1"
 font-3 = "Material Icons:size=9;1"
-font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
+#font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=16;2"
+font-4 = "JetBrainsMono Nerd Font:size=9;1"
 
-modules-right = bspwm
+modules-left = xworkspaces spotify
+module-margin = 1
+modules-right = wlan pulseaudio battery date
 cursor-click = pointer
-
-
-
-
-[bar/left]
-width = 9.3%
-offset-x = 1%
-offset-y = 10px
-height = 27
-top = true
-wm-restack = bspwm
-
-background = ${colors.bg}
-foreground = ${colors.fg}
-
-font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
-font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
-font-2 = "JetBrainsMono Nerd Font:size=19;1"
-font-3 = "Material Icons:size=9;1"
-font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
-
-modules-left = date
-cursor-click = pointer
-
-[bar/center]
-width = 9%
-offset-x = 45%
-offset-y = 10px
-height = 27
-top = true
-wm-restack = bspwm
-
-background = ${colors.bg}
-foreground = ${colors.fg}
-
-font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
-font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
-font-2 = "JetBrainsMono Nerd Font:size=19;1"
-font-3 = "Material Icons:size=9;1"
-font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
-
-modules-center = bspwm
-cursor-click = pointer
-
-
-[bar/right]
-width = 14.5%
-offset-x = 85%
-offset-y = 10px
-height = 27
-top = true
-tray-detached = true
-wm-restack = bspwm
-
-background = ${colors.bg}
-foreground = ${colors.fg}
-
-font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;1"
-font-1 = "JetBrains Mono Nerd Font:style=Bold:size=18;1"
-font-2 = "JetBrainsMono Nerd Font:size=19;1"
-font-3 = "Material Icons:size=9;1"
-font-4 = "JetBrainsMonoExtraBold NF:style=Extra Bold:size=18;4"
-
-modules-right = wlan pulseaudio battery
-cursor-click = pointer
-enable-ipc = true
 
 
 [settings]
@@ -115,19 +44,16 @@ adapter = ADP1
 full-at = 98
 format-charging =  <label-charging>
 label-charging = %percentage:2% % 
-label-charging-padding = 1
-label-discharging-padding = 1
-format-charging-padding = 1
 format-charging-foreground = ${colors.fg}
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <ramp-capacity>  <label-discharging>
 label-discharging = %percentage%% 
 format-discharging-foreground = ${colors.fg}
-format-full-prefix = " "
-ramp-capacity-0 = " "
-ramp-capacity-1 = " "
-ramp-capacity-2 = " "
-ramp-capacity-3 = " "
-ramp-capacity-4 = " "
+format-full-prefix = "   "
+ramp-capacity-0 = "   "
+ramp-capacity-1 = "   "
+ramp-capacity-2 = "   "
+ramp-capacity-3 = "   "
+ramp-capacity-4 = "   "
 ramp-capacity-0-foreground = ${colors.red}
 animation-charging-framerate = 910
 format-discharging-padding = 1
@@ -146,16 +72,16 @@ label-monitor = %name%
 label-active-font = 1
 
 label-focused = %icon%
-label-focused-foreground = #ffffff
+label-focused-foreground = #7dcfff
 label-focused-padding = 1
 
 
 label-occupied = %icon%
-label-occupied-foreground = #d1d1d1
+label-occupied-foreground = #c0caf5
 label-occupied-padding = 1
 
 label-empty = %icon%
-label-empty-foreground = #c2c2c2
+label-empty-foreground = #c0caf5
 label-empty-padding = 1
 
 [module/time]
@@ -224,7 +150,7 @@ label-disconnected-padding = 1
 type = custom/script
 interval = 1
 #format-prefix = " "
-format-prefix = " "
+format-prefix = "   %{F#7aa2f7} %{F-}  " 
 format = <label>
 exec = python ~/scripts/spotify_status.py -f '{artist}: {song}'
 format-underline = #1db954
@@ -233,3 +159,31 @@ click-left = playerctl --player=spotify play-pause
 click-right = playerctl --player=spotify next
 click-middle = playerctl --player=spotify previous
 format-suffix = " "
+
+
+[module/xworkspaces]
+
+type = internal/xworkspaces
+enable-click = true
+enable-scroll = true
+icon-default = 
+label-monitor =
+format = " <label-state> "
+label-active = %{T5}%icon%%{O5}%{T-}
+label-active-underline = #7dcfff
+label-active-foreground = #7dcfff
+label-active-padding = 2
+
+label-occupied = %{T5}%icon%%{O5}%{T-}
+label-occupied-padding = 2
+
+label-occupied-foreground = ${colors.gray}
+
+label-urgent = %{T5}%{O5}%{T-}
+
+label-urgent-foreground = ${colors.red}
+
+label-empty = %{T5}%{O5}%{T-}
+
+label-empty-foreground = ${colors.fg}
+label-empty-padding = 2
