--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,6 +1,7 @@
 [colors]
 #bg = #66101322
 bg = #1a1b26
+#bg = #0C0C13
 #bg = #05151a
 fg = #c0caf5
 red = #ff7a93
@@ -21,7 +22,7 @@ padding-right            = 2
 compositing-underline = over
 
 
-font-0 = "SF Pro Display:size=10;1"
+font-0 = "Poppins:size=10;1"
 font-1 = "JetBrains Mono Nerd Font:style=Bold:size=10;1"
 font-2 = "JetBrainsMono Nerd Font:size=10;1"
 font-3 = "Material Icons:size=9;1"
@@ -29,6 +30,7 @@ font-3 = "Material Icons:size=9;1"
 font-4 = "JetBrainsMono Nerd Font:size=9;1"
 
 modules-left = xworkspaces spotify
+modules-center = title
 module-margin = 1
 modules-right = wlan pulseaudio battery date
 cursor-click = pointer
@@ -45,7 +47,7 @@ full-at = 98
 format-charging =  <label-charging>
 label-charging = %percentage:2% % 
 format-charging-foreground = ${colors.fg}
-format-discharging = <ramp-capacity>  <label-discharging>
+format-discharging = <ramp-capacity>   <label-discharging>
 label-discharging = %percentage%% 
 format-discharging-foreground = ${colors.fg}
 format-full-prefix = "   "
@@ -56,7 +58,8 @@ ramp-capacity-3 = "   "
 ramp-capacity-4 = "   "
 ramp-capacity-0-foreground = ${colors.red}
 animation-charging-framerate = 910
-format-discharging-padding = 1
+format-discharging-padding = 2
+format-charging-padding = 2
 
 [module/bspwm]
 type = internal/bspwm
@@ -153,7 +156,7 @@ interval = 1
 format-prefix = "   %{F#7aa2f7} %{F-}  " 
 format = <label>
 exec = python ~/scripts/spotify_status.py -f '{artist}: {song}'
-format-underline = #1db954
+format-underline = #7dcfff
 ;control players (optional)
 click-left = playerctl --player=spotify play-pause
 click-right = playerctl --player=spotify next
@@ -187,3 +190,9 @@ label-empty = %{T5}%{O5}%{T-}
 
 label-empty-foreground = ${colors.fg}
 label-empty-padding = 2
+
+
+
+[module/title]
+type = internal/xwindow
+format-foreground = ${colors.fg}
