--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,10 +1,13 @@
 [colors]
 #bg = #66101322
-bg = #1a1b26
+bg = #881a1b26
+#bg = #bb020308
+#bg = #1E262B
 #bg = #0C0C13
 #bg = #05151a
 fg = #c0caf5
-red = #ff7a93
+#fg = #959cbd
+red = #a3abcf
 darker-blue = 7aa2f7
 gray = #c0caf5
 
@@ -13,7 +16,10 @@ gray = #c0caf5
 [bar/topbar]
 top = true
 wm-restack = bspwm
-height = 26
+border-color = #b4f9f8
+height = 28
+width = 95%
+offset-x = 2.5%
 underline-size = 2
 background = ${colors.bg}
 foreground = ${colors.fg}
@@ -22,7 +28,7 @@ padding-right            = 2
 compositing-underline = over
 
 
-font-0 = "Poppins:size=10;1"
+font-0 = "Sofia Pro:size=10;1:antialias=true"
 font-1 = "JetBrains Mono Nerd Font:style=Bold:size=10;1"
 font-2 = "JetBrainsMono Nerd Font:size=10;1"
 font-3 = "Material Icons:size=9;1"
