--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -6,7 +6,7 @@
 #"""
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
-success_symbol = "[➜ ](fg:#81D6E9)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+success_symbol = "[➜ ](fg:purple)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "[✗](bold red)"
 #  
 # configure directory
@@ -14,7 +14,7 @@ error_symbol = "[✗](bold red)"
 read_only = " "
 truncation_length = 10
 truncate_to_repo = true # truncates directory to root folder if in github repo
-style = "italic fg:#81D6E9"
+style = "italic fg:blue"
 
 [cmd_duration]
 min_time = 4
