--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -43,21 +43,21 @@ colors: *tokyonight
 font:
   size: 11
   normal:
-    family: Terminus
+    family: Roboto Mono Nerd Font
     style: Regular
   bold:
-    family: Terminus
+    family: Roboto Mono Nerd Font
     style: bold
   italic:
-    family: Terminus
+    family: Roboto Mono Nerd Font
     style: italic
 
 draw_bold_text_with_bright_colors: true
 
 window:
   padding:
-    x: 15
-    y: 2
+    x: 25
+    y: 10
   dynamic_title: true
 
 hide_cursor_when_typing: true
