--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -33,19 +33,19 @@ apply_sens_to_raw=1,
     main_mod=SUPER
 
     gaps_in=15
-    gaps_out=30
-    border_size=2
-    col.inactive_border=0xffb4f9f8
-    col.active_border=0xffbb9af7
-	no_border_on_floating=1
+    gaps_out=45
+    border_size=3
+    col.active_border=0xddf5427e
+    col.inactive_border=0xffaaaaaa
+	no_border_on_floating=0
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
     damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
-	layout="master",
+#	layout="master",
 }
 
 decoration {
-    rounding=4
+    rounding=15
 multisample_edges=1
     blur=1
     blur_size=3 # minimum 1
@@ -56,15 +56,15 @@ multisample_edges=1
 }
 
 animations {
-    enabled=1
-    animation=windows,1,7,default
+	enabled=1
+	animation=windows,1,4,default
     animation=border,1,10,default
     animation=fade,1,10,default
-    animation=workspaces,1,10,default
+    animation=workspaces,1,6,default,slide
 }
 
 dwindle {
-    pseudotile=0 # enable pseudotiling on dwindle
+    pseudotile=1 # enable pseudotiling on dwindle
 }
 
 gestures {
@@ -89,13 +89,18 @@ misc {
 
 windowrule=float,Rofi
 windowrule=opacity 0.98 0.97,Alacritty
-windowrule=opacity 0.98 0.95,firefox
-windowrule=tile,spotify
+windowrule=opacity 0.98 0.97,firefox
+windowrule=tile,title:^(Spotify)$
 windowrule=workspace 5,discord
 windowrule=tile,Sxiv
 
+windowrule=move center,title:^(fly_is_alacritty)$
+windowrule=size 800 500,title:^(fly_is_alacritty)$
+windowrule=float,title:^(fly_is_alacritty)$
+
 # example binds
 bind=SUPER,Return,exec,alacritty
+bind=SUPERSHIFT,Return,exec,alacritty --title fly_is_alacritty
 bind=SUPER,F,fullscreen,
 bind=SUPER,S,togglefloating
 bind=SUPER,C,killactive,
@@ -144,11 +149,11 @@ bind=SUPERSHIFT,j,movewindow,d
 bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +10%
 bind=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -10%
 bind=,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
-bind=,XF86MonBrightnessDown,exec,brillo -U 10
+bind=,XF86MonBrightnessDown,exec,brillo -U 5
 bind=,XF86MonBrightnessUp,exec,brillo -A 10
 bind=,print,exec,grim ~/Pictures/Screenshots/$(date +'%s_grim.png')
 # bind=SHIFT,print,exec,slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
-bind=,print,exec,slurp | grim -g - - | xclip -i -selection c -t image/png
+bind=SHIFT,print,exec,slurp | grim -g - - | xclip -i -selection c -t image/png
 
 
 
@@ -159,4 +164,5 @@ exec-once=hyprpaper
 exec-once=waybar
 exec-once=dunst
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec=swaybg -m fill -i ~/Pictures/wallpapers/wall-0.png
+#exec=swaybg -m fill -i ~/Pictures/wallpapers/waves.png
+exec-once=mpvpaper eDP-1 ~/Pictures/wallpapers/'JAPANESE STREET CHERRY BLOSSOM LIVE WALLPAPER-JAT8r7zvY_A.mp4' -o "--loop"
