--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -35,8 +35,8 @@ apply_sens_to_raw=1,
     gaps_in=15
     gaps_out=45
     border_size=3
-    col.active_border=0xddf5427e
-    col.inactive_border=0xffaaaaaa
+    col.active_border=0xff673ab7
+    col.inactive_border=0xffffab91
 	no_border_on_floating=0
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
@@ -88,19 +88,15 @@ misc {
 #windowrule=monitor 0,xyz
 
 windowrule=float,Rofi
-windowrule=opacity 0.98 0.97,Alacritty
+windowrule=opacity 0.98 0.97,wezterm
 windowrule=opacity 0.98 0.97,firefox
 windowrule=tile,title:^(Spotify)$
 windowrule=workspace 5,discord
 windowrule=tile,Sxiv
 
-windowrule=move center,title:^(fly_is_alacritty)$
-windowrule=size 800 500,title:^(fly_is_alacritty)$
-windowrule=float,title:^(fly_is_alacritty)$
 
 # example binds
-bind=SUPER,Return,exec,alacritty
-bind=SUPERSHIFT,Return,exec,alacritty --title fly_is_alacritty
+bind=SUPER,Return,exec,wezterm
 bind=SUPER,F,fullscreen,
 bind=SUPER,S,togglefloating
 bind=SUPER,C,killactive,
@@ -160,9 +156,7 @@ bind=SHIFT,print,exec,slurp | grim -g - - | xclip -i -selection c -t image/png
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
 
-exec-once=hyprpaper
 exec-once=waybar
-exec-once=dunst
+exec-once=mako
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec=swaybg -m fill -i ~/Pictures/wallpapers/waves.png
-exec-once=mpvpaper eDP-1 ~/Pictures/wallpapers/'JAPANESE STREET CHERRY BLOSSOM LIVE WALLPAPER-JAT8r7zvY_A.mp4' -o "--loop"
+exec-once=~/.config/wpaperd/output.conf
