--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -1,39 +1,59 @@
 {
+    "layer": "bottom", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 15, // Waybar height (to be removed for auto height)
-    "width": 1920, // Waybar width
+    "height": 50, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
-    "modules-left": ["wlr/workspaces", "sway/mode", "custom/media"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "battery","network", "clock", "tray","memory"],
-    "margin-left" : 5,
-    "margin-right" : 5,
-    "margin-top" : 0,
+    // Choose the order of the modules
+    // "margin-left":25,
+    // "margin-right":25,
+    "margin-bottom":-11,
+    //"margin-top":5,
+    "modules-left": ["wlr/workspaces"],
+    "modules-center" : ["clock"],
+    "modules-right": ["custom/media","network","battery","pulseaudio","clock"],
+    //"modules-center": ["custom/dynamic_pill"],
     // Modules configuration
-     "wlr/workspaces": {
-         "disable-scroll": true,
-         "all-outputs": true,
-         "format": "{name}: {icon}",
-	 "on-click": "activate",
-	//"format" : "{icon}",
-         "format-icons": {
-             "1": "",
-             "2": "",
-             "3": "",
-             "4": "",
-             "5": "",
-             "urgent": "",
-             "focused": "",
-             "default": ""
-         },
-	"persistent_workspaces": {
-		"1" : [],
-		"2" : [],
-		"3" : [],
-		"4" : [],
-		"5" : [],
-	}
-     },
+
+
+    // custom modules ////////////////
+    "custom/dynamic_pill": {
+        "return-type": "json",
+        // "format":"{}",
+        "exec": "~/.config/hypr/scripts/tools/start_dyn",
+        "escape":true
+    },
+    "custom/ss":{
+        "format":"{}",
+        "exec":"~/.config/hypr/scripts/tools/expand ss-icon",
+        "on-click": "~/.config/hypr/scripts/screenshot"
+    },
+    "custom/cycle_wall":{
+        "format":"{}",
+        "exec": "~/.config/hypr/scripts/tools/expand wall",
+        // "interval": 1,
+        "on-click": "~/.config/hypr/scripts/tools/expand cycle"
+    },
+    "custom/expand":{
+        "on-click":"~/.config/hypr/scripts/expand_toolbar",
+        "format":"{}",
+        "exec":"~/.config/hypr/scripts/tools/expand arrow-icon"
+    },
+    // "custom/waybar-mpris": {
+    //     "return-type": "json",
+    //     "exec": "echo '   '",
+    //     "on-click": "waybar-mpris --send toggle",
+    //     // This option will switch between players on right click.
+    //         "on-click-right": "waybar-mpris --send player-next",
+    //     // The options below will switch the selected player on scroll
+    //         // "on-scroll-up": "waybar-mpris --send player-next",
+    //         // "on-scroll-down": "waybar-mpris --send player-prev",
+    //     // The options below will go to next/previous track on scroll
+    //         // "on-scroll-up": "waybar-mpris --send next",
+    //         // "on-scroll-down": "waybar-mpris --send prev",
+    //     "escape": true
+    // },
+    //////////////////////////////////
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
@@ -41,6 +61,17 @@
         "format-icons": {
             "locked": "",
             "unlocked": ""
+        }
+    },
+    "wlr/workspaces": {
+        "format": "{icon}",
+        "format-active": " {icon} ",
+        "on-click": "activate",
+        // "format-icons":{
+        //     "10":"10"
+        // }
+        "persistent_workspaces" : {
+            "3" : [],
         }
     },
     "sway/mode": {
@@ -86,11 +117,14 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
+        "interval": 60,
+        "format": "{:%I:%M}",
+        "max-length": 25
     },
     "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+        "interval":1,
+        "format": "{icon0} {icon1} {icon2} {icon3}",
+        "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
     },
     "memory": {
         "format": "{}% "
@@ -99,40 +133,38 @@
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
+        "format-critical": "{temperatureC}°C",
+        "format": ""
     },
     "backlight": {
-        "device": "acpi_video1",
+        "device": "amdgpu_bl1",
         "format": "{percent}% {icon}",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
     "battery": {
         "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
+            "warning": 50,
+            "critical": 10
         },
-        "format": "{icon} {capacity}%",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
+        "format": "{icon}",
+        //"format-charging": "",
+        "format-charging": "",
+        "format-plugged": "",
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": ["", "", "", "", ""]
     },
     "battery#bat2": {
-        "bat": "BAT0"
+        "bat": "BAT2"
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "interface": "wlp2s0", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-ethernet": "",
+        "tooltip-format": "via {gwaddr} {ifname}",
+        "format-linked": "",
+        "format-disconnected": "wifi",
+        "format-alt": "   "
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
@@ -140,11 +172,9 @@
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
-        //"format-source": "{volume}% ",
-        //"format-source-muted": "",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
+            "headphone": "",
+            "hands-free": "",
             "headset": "",
             "phone": "",
             "portable": "",
@@ -154,23 +184,16 @@
         "on-click": "pavucontrol"
     },
     "custom/media": {
-	    "format": "{icon} {}",
-	    "escape": true,
-	    "format-icons": {
-		    "spotify": "",
-		    "default": ""
-	    },
-
-	    "return-type": "json",
-	    "max-length": 40,
-	    "on-click": "playerctl play-pause",
-	    "on-click-right": "playerctl stop",
-	    "smooth-scrolling-threshold": 10, // This value was tested using a trackpad, it should be lowered if using a mouse.
-	    "on-scroll-up": "playerctl next",
-	    "on-scroll-down": "playerctl previous",
-	    "exec": "python $HOME/.config/waybar/custom_modules/mediaplayer.py 2> /dev/null", // Script in resources/custom_modules folder
+        "format": "{icon} {}",
+        "return-type": "json",
+        "max-length": 40,
+        "format-icons": {
+            "spotify": "",
+            "default": "🎜"
+        },
+        "escape": true,
+        //"exec": "python $HOME/.config/waybar/custom_modules/mediaplayer.py 2> /dev/null" // Script in resources folder
+        "exec": "python $HOME/.config/waybar/custom_modules/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     }
-
 }
-
 
