--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@
 monitor=eDP-1,1920x1080,0x0,1
 workspace=eDP-1,1,2,3
 
+
 input {
     kb_layout=
     kb_variant=
@@ -28,14 +29,14 @@ input {
 }
 
 general {
-    sensitivity=1.4 # for mouse cursor
+    sensitivity=0.9 # for mouse cursor
 apply_sens_to_raw=1,
     main_mod=SUPER
 
     gaps_in=15
-    gaps_out=45
-    border_size=3
-    col.active_border=0xff673ab7
+    gaps_out=15
+    border_size=4
+    col.active_border=0xffCA9EE6
     col.inactive_border=0xffffab91
 	no_border_on_floating=0
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
@@ -45,22 +46,26 @@ apply_sens_to_raw=1,
 }
 
 decoration {
-    rounding=15
-multisample_edges=1
-    blur=1
-    blur_size=3 # minimum 1
-    blur_passes=1 # minimum 1, more passes = more resource intensive.
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
+    rounding = 5
+    blur = yes
+    blur_size = 4
+    blur_passes = 4
+    blur_new_optimizations = on
+
+    drop_shadow = yes
+    shadow_range = 4
+    shadow_render_power = 3
+    blur_ignore_opacity=1
+    #col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-	enabled=1
-	animation=windows,1,4,default
+  enabled=1
+    bezier=overshot,.21,.57,.34,1.05
+    animation=windows,1,4,overshot,slide
     animation=border,1,10,default
     animation=fade,1,10,default
-    animation=workspaces,1,6,default,slide
+    animation=workspaces,1,6,overshot,slide
 }
 
 dwindle {
@@ -88,11 +93,13 @@ misc {
 #windowrule=monitor 0,xyz
 
 windowrule=float,Rofi
-windowrule=opacity 0.98 0.97,wezterm
-windowrule=opacity 0.98 0.97,firefox
-windowrule=tile,title:^(Spotify)$
-windowrule=workspace 5,discord
+windowrule=opacity 0.9,WebCord
+windowrule=opacity 0.91 0.9,wezterm
+windowrule=opacity 0.9 0.88,firefox
+windowrule=tile,spotify
+windowrule=workspace 5,WebCord
 windowrule=tile,Sxiv
+windowrule=move center,wezterm
 
 
 # example binds
@@ -149,14 +156,16 @@ bind=,XF86MonBrightnessDown,exec,brillo -U 5
 bind=,XF86MonBrightnessUp,exec,brillo -A 10
 bind=,print,exec,grim ~/Pictures/Screenshots/$(date +'%s_grim.png')
 # bind=SHIFT,print,exec,slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
-bind=SHIFT,print,exec,slurp | grim -g - - | xclip -i -selection c -t image/png
+bind=SHIFT,print,exec,slurp | grim -g - - | wl-copy
 
 
 
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
 
+exec-once=swaybg -i ~/wallpapers/bart.jpg
 exec-once=waybar
 exec-once=mako
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=~/.config/wpaperd/output.conf
+#exec-once=~/.cargo/bin/wpaperd
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
