--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -5,13 +5,14 @@
 #[╰─cmd────❯](bold green) 
 #"""
 format = """
-$directory$rust$git_branch$git_status$package$golang$terraform$docker_context$python$docker_context$nodejs
-$character 
+╭─ $directory$rust$git_branch$git_status$package$golang$terraform$docker_context$python$docker_context$nodejs
+╰─ $character 
 
 """
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
-success_symbol = "[](fg:blue)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+success_symbol = "[➜](fg:blue)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
+
 error_symbol = "[✗](bold fg:#ffab91)"
 #  
 # configure directory
