--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -4,4 +4,5 @@ exec-once = waybar
 exec-once = hypridle
 exec-once = swaync
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = hyprshade on gruv
+#exec-once = hyprshade on gruv
+exec-once = wl-paste --watch cliphist store
