--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -4,10 +4,12 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod,v,exec,rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme-str '#window {height: 80%; }' -theme-str '#element-icon {size: 12ch; }'
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+bind = SUPER, p, togglespecialworkspace
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
