--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
-monitor=,1920x1080@60,auto,1.5
+#monitor=eDP-1,1920x1080@60,auto,1.5
+monitor=,1920x1080@60,auto,1.5,mirror,HDMI-A-1
 
-$terminal = kitty
+$terminal = alacritty
 $fileManager = dolphin
 $menu = rofi -show drun
 $editor = nvim
@@ -17,31 +18,31 @@ env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 
 general { 
-    gaps_in = 10
-    gaps_out = 25
+    gaps_in = 10,10
+    gaps_out = 20,20
 
     border_size = 2
     
-    col.active_border = rgb(e7d8b1)
+    col.active_border = rgb(c5c9c5)
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     #col.inactive_border = rgba(595959aa)
     #col.active_border = rgba(f7768eff)
 
     resize_on_border = false 
 
-    allow_tearing = true
+    #allow_tearing = true
 
     layout = master
 }
 
 decoration {
-    rounding = 8
+    rounding = 6
 
     active_opacity = 0.95
     inactive_opacity = 0.95
     
     shadow {
-    range = 4
+    range = 0
     render_power = 3
     color = rgba(1a1a1aee)
     }
@@ -51,23 +52,23 @@ decoration {
         enabled = true
         size = 5
         new_optimizations = true
-        vibrancy = 0.9
-        passes = 3
-        
         vibrancy = 1
+        passes = 4
+        
+        vibrancy = 0
     }
-	screen_shader = ~/.config/hypr/shaders/gruv.glsl
+	#screen_shader = ~/.config/hypr/shaders/epaper.glsl
 }
 
 animations {
     enabled = true
 
-    bezier = overshot, 0.13, 0.99, 0.29, 1.0
+    bezier = overshot, 0.13, 1.0, 0.29, 1.0
     animation = windows, 1, 4, overshot, slide
     animation = windowsOut, 1, 5, default, popin 80%
     animation = border, 1, 5, default
     animation = fade, 1, 8, default
-    animation = workspaces, 1, 3, overshot, slide
+    animation = workspaces, 1, 4, overshot, slide
     # animation = layers, 1, 8, overshot, popin
     #animation = borderangle, 1, 25, overshot, loop
 
@@ -118,10 +119,7 @@ gestures {
 }
 
 
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+
 
 xwayland {
   force_zero_scaling = true
@@ -130,22 +128,24 @@ xwayland {
 
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-
+workspace = 2, gapsin:10, gapsout:20 100
 source = ~/.config/hypr/bindings.conf
-windowrule = float, class:Emacs
+#windowrule = float, class:Emacs
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrule = workspace 1, firefox
-windowrule = workspace 2, $editor
-windowrule = workspace 3, Spotify
-windowrule = workspace 4, vesktop
+#windowrule = workspace special, emacs
+windowrule = workspace 1, class:zen
+windowrule = workspace 2, class:$editor
+windowrule = workspace 3, class:Spotify
+windowrule = workspace 4, class:vesktop
 windowrulev2 = opacity 1.0 override 1.0 override 1.0 override,class:code
 windowrulev2 = opacity 0.9 0.9, class:^(vesktop)$
 windowrulev2 = size 400 500, title:^(Save As)(.*)$
 bindl=,switch:Lid Switch, exec, hyprlock
 windowrulev2 = opacity 1.0, class:kitty
-windowrulev2 = opacity 0.95, class:firefox
+windowrulev2 = opacity 0.9, class:zen
 source = ~/.config/hypr/env.conf
 layerrule = blur,waybar
+layerrule = blur,rofi
 
 
 windowrulev2 = immediate, class:^(Minecraft 1.8.9)$
