--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,8 +9,7 @@ general {
 
 background {
     monitor = eDP-1
-    path = ~/Pictures/wallpapers/output_image.jpg
-    # path = $HOME/.config/swww/Wallpapers/001.jpg
+    path = ~/Pictures/wallpapers/lofi.jpeg
     blur_passes = 2 # 0 disables blurring
     noise = 0.0117
     contrast = 1.3000 # Vibrant!!!
