--- a/.config/kitty/themes/xcad.conf
+++ b/.config/kitty/themes/xcad.conf
@@ -1,7 +1,7 @@
 # The basic colors
 foreground              #dddddd
 background              #191919
-selection_background    #289b9ff
+selection_background    #289b9f
 
 # Cursor colors
 cursor                  #f4dbd6
