--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,5 @@
-set -ag terminal-overrides ",xterm-kitty:Tc"
+set -ag terminal-overrides ",alacritty:Tc"
 set-option -g status-position top
-set -g default-terminal "screen-256color" 
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -19,21 +18,24 @@ unbind %
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
-# set-option -g default-terminal "tmux-256color" 
+set-option -g default-terminal "xterm-256color" 
 # List of plugins
 set -g @kanagawa-ignore-window-colors true
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @tokyo-night-tmux_show_datetime 0
+## set -g @tokyo-night-tmux_show_datetime 0
 # set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative
-set -g @tokyo-night-tmux_window_id_style fsquare
-set -g @tokyo-night-tmux_window_id_style fsquare
-set -g @tokyo-night-tmux_show_git 1
+## set -g @tokyo-night-tmux_path_format relative
+## set -g @tokyo-night-tmux_window_id_style fsquare
+## set -g @tokyo-night-tmux_window_id_style fsquare
+## set -g @tokyo-night-tmux_show_git 1
 # set -g @plugin 'Nybkox/tmux-kanagawa'
-set -g @plugin "janoamaral/tokyo-night-tmux"
-#set -g @kanagawa-theme 'dragon'
-
+#set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @kanagawa-theme 'dragon'
+set -g @kanagawa-transparent-powerline-bg true
+set -g @kanagawa-colors "dragon_black_2='#181616'"
+set -g status-bg '#181616'
+set -g @plugin 'Nybkox/tmux-kanagawa'
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, playerctl, kubernetes-context, synchronize-panes
 # set -g @kanagawa-plugins "time git"
 
