--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -8,7 +8,8 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = GTK_THEME,Catppuccin-Dark
+#env = GTK_THEME,Catppuccin-Dark
+env = GTK_THEME,WhiteSur-Dark
 
 
 windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
