--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,13 +1,12 @@
-font_family JetBrainsMono Nerd Font
+font_family Maple Mono NF 
 font_size 10
-modify_font cell_height 125%
+modify_font cell_height 100%
 
 # text_composition_strategy 2
 
-window_padding_width 20 0 0 20
+window_padding_width 10 0 0 10
 
-background_opacity 1
-include themes/MaterialDark.conf
-
+background_opacity 0.8
+include themes/kanagawa_dragon.conf
+scrollback_lines 1000
 shell_integration enabled
-
