--- a/.config/hypr/env.conf
+++ b/.config/hypr/env.conf
@@ -10,7 +10,7 @@ env = QT_QPA_PLATFORMTHEME, qt6ct
 #env =  QT_STYLE_OVERRIDE=kvantum
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 #env = GTK_THEME,Catppuccin-Dark
-env = GTK_THEME,Adwaita
+env = GTK_THEME,adw-gtk3-dark
 
 
 windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
