--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -7,7 +7,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod,v,exec,rofi -modi clipboard:cliphist-rofi-img -show clipboard -show-icons -theme-str '#window {height: 80%; }' -theme-str '#element-icon {size: 12ch; }'
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+#bind = $mainMod, J, togglesplit, # dwindle
 
 bind = SUPER, p, togglespecialworkspace
 # Move focus with mainMod + arrow keys
@@ -55,8 +55,8 @@ bindm = $mainMod, mouse:273, resizewindow
 
 
 
-#bind = $mainMod, J, layoutmsg, cyclenext
-#bind = $mainMod, K, layoutmsg, swapwithmaster master
+bind = $mainMod, J, layoutmsg, cyclenext
+bind = $mainMod, K, layoutmsg, swapwithmaster master
 bind = SUPER, Tab, cyclenext,           # change focus to another window
 bind = SUPER, Tab, bringactivetotop,    # bring it to the top
 
