--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 general { 
     gaps_in = 2,2
-    gaps_out = 5,5
+    gaps_out = 15,15
 
     border_size = 2
     
@@ -34,7 +34,7 @@ general {
 
     #allow_tearing = true
 
-    layout = dwindle
+    layout = master
 }
 
 decoration {
@@ -164,6 +164,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 workspace = 2, gapsin:10, gapsout:20 100
 source = ~/.config/hypr/bindings.conf
+windowrulev2 = float, class:waypaper
 #windowrule = float, class:Emacs
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 #windowrule = workspace special, emacs
@@ -177,6 +178,7 @@ windowrulev2 = size 400 500, title:^(Save As)(.*)$
 bindl=,switch:Lid Switch, exec, hyprlock
 windowrulev2 = opacity 1.0, class:kitty
 windowrulev2 = opacity 1, class:zen
+windowrulev2 = opacity 1, class:org.gnome.Nautilus
 source = ~/.config/hypr/env.conf
 layerrule = blur,waybar
 layerrule = blur,rofi
@@ -188,3 +190,10 @@ layerrule = ignorezero, rofi
 
 layerrule = blur, anyrun
 layerrule = ignorealpha 0.1, anyrun
+
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
