--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -57,5 +57,10 @@ output_path = '~/.local/state/quickshell/user/generated/material_colors.scss'
 input_path = '~/.config/matugen/templates/hyprland.conf'
 output_path = '~/.config/hypr/colors.conf'
 
+[templates.swaync]
+input_path = '~/.config/matugen/templates/swaync.css'
+output_path = '~/.config/swaync/colors.css'
+
+
 
 
