--- a/.config/matugen/templates/starship-colors.toml
+++ b/.config/matugen/templates/starship-colors.toml
@@ -5,7 +5,7 @@ palette = 'colors'
 
 [palettes.colors]
 mustard = '#af8700' # example
-color1 = '{{colors.primary_fixed_dim.default.hex}}'
+color1 = '{{colors.primary.default.hex}}'
 color2 = '{{colors.on_primary.default.hex}}'
 color3 = '{{colors.on_surface_variant.default.hex}}'
 color4 = '{{colors.surface_container.default.hex}}'
